--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.6.0",
     "astro": "^5.15.5",
     "dotenv": "^17.2.3"
   }
