--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,11 @@
   node_bundler = "esbuild"
 
 [[redirects]]
-  from = "/*"
+  from = "/api/*"
   to = "/.netlify/functions/entry"
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
   status = 200
