--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.6.0",
+    "@netlify/functions": "^5.1.0",
     "astro": "^5.15.5",
     "dotenv": "^17.2.3"
   }
