--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,18 @@
 [build]
   command = "npm run build"
+  publish = "dist"
 
-[functions]
-  node_bundler = "esbuild"
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/entry"
+  to = "/.netlify/functions/:splat"
   status = 200
+  force = true
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
