--- a/netlify.toml
+++ b/netlify.toml
@@ -3,9 +3,10 @@
   publish = "dist"
 
 [functions]
+  directory = "netlify/functions"
   node_bundler = "esbuild"
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/entry"
+  to = "/.netlify/functions/:splat"
   status = 200
