--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,9 @@
   publish = "dist"
 
 [functions]
-  directory = "netlify/functions"
   node_bundler = "esbuild"
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/:splat"
+  to = "/.netlify/functions/entry"
   status = 200
