--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/sitemap": "^3.6.0",
+    "@fontsource/playfair-display": "^5.2.8",
+    "@fontsource/quicksand": "^5.2.10",
     "@netlify/functions": "^5.1.0",
     "astro": "^5.16.4",
     "dotenv": "^17.2.3"
